ci: run on main branch
Signed-off-by: Jakub Mucha <jakub.mucha@icloud.com>

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,9 +2,10 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [master]
+    branches: [main]
     paths:
-      - "output/**"
+      - "**/output/**"
+      - "**/Dockerfile"
       - ".github/workflows/docker-image.yml"
 
 jobs:
