ci: build video
Signed-off-by: Jakub Mucha <jakub.mucha@icloud.com>

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,7 +16,7 @@ jobs:
   build_and_push:
     strategy:
       matrix:
-        image: [display]
+        image: [display, video]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
