ci: fix context
Signed-off-by: Jakub Mucha <jakub.mucha@icloud.com>

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -52,7 +52,7 @@ jobs:
       - name: Build and push (${{ matrix.image }})
         uses: docker/build-push-action@c84f38281176d4c9cdb1626ffafcd6b3911b5d94 # pin@v2
         with:
-          context: .
+          context: ./${{ matrix.image }}
           file: ./${{ matrix.image }}/Dockerfile
           platforms: linux/amd64
           push: true
