feat: add foundry
Signed-off-by: Jakub Mucha <jakub.mucha@icloud.com>

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,7 +12,7 @@ jobs:
   build_and_push:
     strategy:
       matrix:
-        image: [display, video, ngrok]
+        image: [display, video, ngrok, foundry]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
