--- a/foundry/Dockerfile
+++ b/foundry/Dockerfile
@@ -4,7 +4,7 @@ RUN apk add clang lld curl build-base linux-headers git \
     && curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs > rustup.sh \
     && chmod +x ./rustup.sh \
     && ./rustup.sh -y
-RUN git clone https://github.com/foundry-rs/foundry.git
+RUN git clone https://github.com/foundry-rs/foundry.git#b554ab1fec09087fa3a35c6728968edca6debcf2
 WORKDIR /opt/foundry
 RUN source $HOME/.profile && cargo build --release \
     && strip /opt/foundry/target/release/forge \
@@ -24,4 +24,7 @@ COPY --from=builder /opt/foundry/target/release/forge /usr/local/bin/forge
 COPY --from=builder /opt/foundry/target/release/cast /usr/local/bin/cast
 COPY --from=builder /opt/foundry/target/release/anvil /usr/local/bin/anvil
 RUN adduser -Du 1000 foundry
+
+ENV ANVIL_FORK_URL https://rpc.ankr.com/eth_goerli
+
 ENTRYPOINT ["/bin/sh", "-c"]
