chore: trunk upgrade
Signed-off-by: Jakub Mucha <jakub.mucha@icloud.com>

--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -1,6 +1,7 @@
 version: 0.1
 runtimes:
   enabled:
+    - python@3.10.3
     - go@1.18.3
     - node@16.14.2
 actions:
@@ -8,18 +9,21 @@ actions:
     - trunk-cache-prune
     - trunk-upgrade-available
 cli:
-  version: 0.18.1-beta
+  version: 1.2.1
 plugins:
   sources:
     - id: trunk
-      ref: v0.0.3
+      ref: v0.0.8
       uri: https://github.com/trunk-io/plugins
 lint:
   enabled:
-    - actionlint@1.6.17
+    - black@22.12.0
+    - flake8@6.0.0
+    - isort@5.11.4
+    - actionlint@1.6.22
     - git-diff-check@SYSTEM
-    - gitleaks@8.12.0
-    - hadolint@2.10.0
-    - prettier@2.7.1
-    - shellcheck@0.8.0
+    - gitleaks@8.15.2
+    - hadolint@2.12.0
+    - prettier@2.8.1
+    - shellcheck@0.9.0
     - shfmt@3.5.0
