chore: use nginx user
Signed-off-by: Jakub Mucha <jakub.mucha@icloud.com>

--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -35,3 +35,5 @@ RUN chmod a+x /etc/periodic/daily/update_blocker
 # start crond to update blocker
 # trunk-ignore(hadolint/DL3059)
 RUN crond -b
+
+USER nginx
