feat: modsec, crs, sec
Signed-off-by: Jakub Mucha <jakub.mucha@icloud.com>

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,11 +1,18 @@
 user  nginx;
 worker_processes  auto;
+worker_rlimit_nofile  65535;
 
-error_log  /var/log/nginx/error.log notice;
+load_module modules/ngx_http_modsecurity_module.so;
+load_module modules/ngx_http_geoip2_module.so;
+load_module modules/ngx_http_waf_module.so;
+
+# error_log  /var/log/nginx/error.log warn;
+error_log  /dev/stdout warn;
 pid        /var/run/nginx.pid;
 
 events {
-    worker_connections  1024;
+    worker_connections 65535;
+    multi_accept       on;
 }
 
 http {
@@ -16,14 +23,144 @@ http {
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
 
-    access_log  /var/log/nginx/access.log  main;
+    log_format  yaml    '- remote_addr: "$remote_addr"\n'
+                        '  remote_user: "$remote_user"\n'
+                        '  time_local: "$time_local"\n'
+                        '  request: "$request"\n'
+                        '  status: "$status"\n'
+                        '  body_bytes_sent: "$body_bytes_sent"\n'
+                        '  http_referer: "$http_referer"\n'
+                        '  http_user_agent: "$http_user_agent"\n'
+                        '  http_x_forwarded_for: "$http_x_forwarded_for"\n'
+                        '  waf_blocked: $waf_blocked\n'
+                        '  waf_spend: $waf_spend\n'
+                        '  waf_rule_type: "$waf_rule_type"\n'
+                        '  waf_rule_details: "$waf_rule_details"\n';
 
-    sendfile        on;
-    #tcp_nopush     on;
+    # access_log   /var/log/nginx/access.log  main;
+    access_log   /dev/stdout    main;
 
-    keepalive_timeout  65;
+    charset                     utf-8;
+    sendfile                     on;
+    keepalive_timeout           5;
+    autoindex                   off;
+    port_in_redirect            off;
+    tcp_nopush                  on;
+    tcp_nodelay                 on;
+    types_hash_max_size         2048;
+    types_hash_bucket_size      64;
+    client_max_body_size        200k;
+    client_body_buffer_size     128k;
+    client_header_buffer_size   16k;
+    large_client_header_buffers 3 1k;
+    fastcgi_buffer_size         16k;
+    fastcgi_buffers             4 16k;
+    server_tokens               off;
+    log_not_found               off;
+    proxy_ignore_client_abort   on;
+    client_body_timeout         5s;
+    client_header_timeout       5s;
 
-    #gzip  on;
+    open_file_cache             max=35000 inactive=30s;
+    open_file_cache_valid       30s;
+    open_file_cache_min_uses    2;
 
+    gzip                on;
+    gzip_vary           on;
+    gzip_proxied        any;
+    gzip_types          application/javascript application/x-javascript application/rss+xml text/javascript text/css text/plain image/x-icon image/svg+xml;
+    gzip_buffers        4 16k;
+    gzip_comp_level     6;
+    gzip_min_length     256;
+
+    # link iso country codes from the geoip2 db
+    geoip2 /etc/nginx/geoip/dbip-country-lite.mmdb {
+        $geoip2_data_country_code country iso_code;
+    }
+
+    # map HSTS header
+    map $scheme $hsts_header { https "max-age=31556926; includeSubDomains; preload"; }
+
+    # map status to exclude from access log
+    map $status $writelog { 444 0; default 1; }
+
+    # Connection header for WebSocket reverse proxy
+    map $http_upgrade $connection_upgrade {
+        default upgrade;
+        ""      close;
+    }
+
+    map $remote_addr $proxy_forwarded_elem {
+        # IPv4 addresses can be sent as-is
+        ~^[0-9.]+$        "for=$remote_addr";
+
+        # IPv6 addresses need to be bracketed and quoted
+        ~^[0-9A-Fa-f:.]+$ "for=\"[$remote_addr]\"";
+
+        # Unix domain socket names cannot be represented in RFC 7239 syntax
+        default           "for=unknown";
+    }
+
+    map $http_forwarded $proxy_add_forwarded {
+        # If the incoming Forwarded header is syntactically valid, append to it
+        "~^(,[ \\t]*)*([!#$%&'*+.^_`|~0-9A-Za-z-]+=([!#$%&'*+.^_`|~0-9A-Za-z-]+|\"([\\t \\x21\\x23-\\x5B\\x5D-\\x7E\\x80-\\xFF]|\\\\[\\t \\x21-\\x7E\\x80-\\xFF])*\"))?(;([!#$%&'*+.^_`|~0-9A-Za-z-]+=([!#$%&'*+.^_`|~0-9A-Za-z-]+|\"([\\t \\x21\\x23-\\x5B\\x5D-\\x7E\\x80-\\xFF]|\\\\[\\t \\x21-\\x7E\\x80-\\xFF])*\"))?)*([ \\t]*,([ \\t]*([!#$%&'*+.^_`|~0-9A-Za-z-]+=([!#$%&'*+.^_`|~0-9A-Za-z-]+|\"([\\t \\x21\\x23-\\x5B\\x5D-\\x7E\\x80-\\xFF]|\\\\[\\t \\x21-\\x7E\\x80-\\xFF])*\"))?(;([!#$%&'*+.^_`|~0-9A-Za-z-]+=([!#$%&'*+.^_`|~0-9A-Za-z-]+|\"([\\t \\x21\\x23-\\x5B\\x5D-\\x7E\\x80-\\xFF]|\\\\[\\t \\x21-\\x7E\\x80-\\xFF])*\"))?)*)?)*$" "$http_forwarded, $proxy_forwarded_elem";
+
+        # Otherwise, replace it
+        default "$proxy_forwarded_elem";
+    }
+
+    waf_zone name=waf size=20m;
+    server {
+        include /etc/nginx/bots.d/blockbots.conf;
+
+        # restrict methods (already handled with modsecurity)
+        # if ($request_method !~ ^(GET)$) {
+        #     return '444';
+        # }
+
+        modsecurity on;
+        modsecurity_rules_file /etc/nginx/modsec/main.conf;
+
+        # log only blocked requests
+        access_log  logs/waf_blocked_requests.yml     yaml   if=$waf_blocking_log;
+
+        # waf setup
+        waf on;
+        waf_rule_path /etc/nginx/waf_assets/rules/;
+        waf_mode FULL;
+        waf_cc_deny on rate=100/m duration=1h zone=waf:cc;
+        waf_cache on capacity=50;
+        # waf_modsecurity on file=/etc/nginx/modsec/main.conf;
+        waf_action blacklist=444 cc_deny=444 modsecurity=follow zone=waf:action;
+        waf_verify_bot on;
+
+        # security headers
+        # add_header X-XSS-Protection          "1; mode=block" always;
+        # add_header X-Content-Type-Options    "nosniff" always;
+        # add_header Referrer-Policy           "no-referrer-when-downgrade" always;
+        # add_header Content-Security-Policy   "default-src 'self' http: https: ws: wss: data: blob: 'unsafe-inline'; frame-ancestors 'self';" always;
+        # add_header Permissions-Policy        "interest-cohort=()" always;
+        # add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
+
+        # . files
+        location ~ /\.(?!well-known) {
+            deny all;
+        }
+
+        # # images
+        # location ~* \.(gif|jpg|png|jpeg|webp|bmp|swf|ico)$ {
+        #     expires max;
+        #     access_log off;
+        #     add_header ETag "";
+        # }
+
+        # # fonts
+        # location ~* \.(swf|eot|ttf|otf|woff|woff2)$ {
+        #     expires max;
+        #     access_log off;
+        #     add_header ETag "";
+        #     add_header Cache-Control "public";
+        # }
+    }
     include /etc/nginx/conf.d/*.conf;
 }
