feat: gzip, ratelimiting, etc
Signed-off-by: Jakub Mucha <jakub.mucha@icloud.com>

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -66,12 +66,13 @@ http {
     open_file_cache_min_uses    2;
 
     gzip                on;
+    gzip_disable        "msie6";
     gzip_vary           on;
     gzip_proxied        any;
     gzip_types          application/javascript application/x-javascript application/rss+xml text/javascript text/css text/plain image/x-icon image/svg+xml;
     gzip_buffers        4 16k;
     gzip_comp_level     6;
-    gzip_min_length     256;
+    gzip_min_length     0;
 
     # link iso country codes from the geoip2 db
     geoip2 /etc/nginx/geoip/dbip-country-lite.mmdb {
@@ -109,6 +110,12 @@ http {
         default "$proxy_forwarded_elem";
     }
 
+    limit_req_zone $binary_remote_addr zone=reqperip:10m rate=2r/s;
+    limit_req_status 429;
+
+    limit_conn_zone $binary_remote_addr zone=connperip:10m;
+    limit_conn_status 429;
+
     waf_zone name=waf size=20m;
     server {
         include /etc/nginx/bots.d/blockbots.conf;
@@ -141,6 +148,32 @@ http {
         # add_header Content-Security-Policy   "default-src 'self' http: https: ws: wss: data: blob: 'unsafe-inline'; frame-ancestors 'self';" always;
         # add_header Permissions-Policy        "interest-cohort=()" always;
         # add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
+
+        # note: this should only apply to proxies
+        # proxy-related setup
+        proxy_http_version                 1.1;
+        proxy_redirect                     off;
+        proxy_cache_bypass                 $http_upgrade;
+        proxy_set_header Host              $http_host;
+        proxy_set_header Upgrade           $http_upgrade;
+        proxy_set_header Connection        $connection_upgrade;
+        proxy_set_header X-Real-IP         $remote_addr;
+        proxy_set_header Forwarded         $proxy_add_forwarded;
+        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host  $host;
+        proxy_set_header X-Forwarded-Port  $server_port;
+        proxy_connect_timeout              30s;
+        proxy_send_timeout                 30s;
+        proxy_read_timeout                 30s;
+
+        location /basic_status
+        {
+            allow 127.0.0.1;
+            allow ::1;
+            deny all;
+            stub_status;
+        }
 
         # . files
         location ~ /\.(?!well-known) {
