--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -65,14 +65,19 @@ http {
     open_file_cache_valid       30s;
     open_file_cache_min_uses    2;
 
-    gzip                on;
-    gzip_disable        "msie6";
-    gzip_vary           on;
-    gzip_proxied        any;
-    gzip_types          application/javascript application/x-javascript application/rss+xml text/javascript text/css text/plain image/x-icon image/svg+xml;
-    gzip_buffers        4 16k;
-    gzip_comp_level     6;
+    gzip on;
+    gzip_http_version 1.1;
+    gzip_vary on;
+    gzip_comp_level 6;
+    gzip_proxied any;
+    gzip_types application/atom+xml application/javascript application/json application/rss+xml application/vnd.ms-fontobject application/x-font-ttf application/x-web-app-manifest+json application/xhtml+xml application/xml font/opentype image/svg+xml image/x-icon text/css text/plain text/x-component;
+    gzip_buffers 16 8k;
     gzip_min_length     0;
+    gzip_disable msie6;
+
+    brotli on;
+    brotli_types text/plain text/css application/json application/javascript application/x-javascript text/javascript;
+    brotli_comp_level 6;
 
     # link iso country codes from the geoip2 db
     geoip2 /etc/nginx/geoip/dbip-country-lite.mmdb {
