--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,6 +5,8 @@ worker_rlimit_nofile  65535;
 load_module modules/ngx_http_modsecurity_module.so;
 load_module modules/ngx_http_geoip2_module.so;
 load_module modules/ngx_http_waf_module.so;
+load_module modules/ngx_http_brotli_filter_module.so;
+load_module modules/ngx_http_brotli_static_module.so;
 
 # error_log  /var/log/nginx/error.log warn;
 error_log  /dev/stdout warn;
