--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,7 +9,8 @@ load_module modules/ngx_http_brotli_filter_module.so;
 load_module modules/ngx_http_brotli_static_module.so;
 
 # error_log  /var/log/nginx/error.log warn;
-error_log  /dev/stdout warn;
+# error_log  /dev/stdout warn;
+error_log  /dev/stdout error;
 pid        /var/run/nginx.pid;
 
 events {
@@ -40,7 +41,8 @@ http {
                         '  waf_rule_details: "$waf_rule_details"\n';
 
     # access_log   /var/log/nginx/access.log  main;
-    access_log   /dev/stdout    main;
+    # access_log   /dev/stdout    main;
+    access_log off;
 
     charset                     utf-8;
     sendfile                     on;
@@ -136,7 +138,8 @@ http {
         modsecurity_rules_file /etc/nginx/modsec/main.conf;
 
         # log only blocked requests
-        access_log  logs/waf_blocked_requests.yml     yaml   if=$waf_blocking_log;
+        # access_log  logs/waf_blocked_requests.yml     yaml   if=$waf_blocking_log;
+        access_log    /dev/stdout    main    if=$waf_blocking_log;
 
         # waf setup
         waf on;
