--- a/nginx/conf/owasp/crs-setup.conf
+++ b/nginx/conf/owasp/crs-setup.conf
@@ -104,8 +104,8 @@
 # - In Apache, you can use ErrorDocument to show a friendly error page or
 #   perform a redirect: https://httpd.apache.org/docs/2.4/custom-error.html
 #
-SecDefaultAction "phase:1,nolog,auditlog,pass"
-SecDefaultAction "phase:2,nolog,auditlog,pass"
+# SecDefaultAction "phase:1,nolog,auditlog,pass"
+# SecDefaultAction "phase:2,nolog,auditlog,pass"
 
 # Example: Self-contained mode, return error 403 on blocking
 # - In this configuration the default disruptive action becomes 'deny'. After a
