--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -145,7 +145,7 @@ http {
         waf on;
         waf_rule_path /etc/nginx/waf_assets/rules/;
         waf_mode FULL;
-        waf_cc_deny on rate=100/m duration=1h zone=waf:cc;
+        waf_cc_deny on rate=100r/m duration=1h zone=waf:cc;
         waf_cache on capacity=50;
         # waf_modsecurity on file=/etc/nginx/modsec/main.conf;
         waf_action blacklist=444 cc_deny=444 modsecurity=follow zone=waf:action;
