chore: config changes
Signed-off-by: Jakub Mucha <jakub.mucha@icloud.com>

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -119,37 +119,21 @@ http {
         default "$proxy_forwarded_elem";
     }
 
-    limit_req_zone $binary_remote_addr zone=reqperip:10m rate=2r/s;
-    limit_req_status 429;
+    # limit_req_zone $binary_remote_addr zone=reqperip:10m rate=2r/s;
+    # limit_req_status 429;
 
-    limit_conn_zone $binary_remote_addr zone=connperip:10m;
-    limit_conn_status 429;
+    # limit_conn_zone $binary_remote_addr zone=connperip:10m;
+    # limit_conn_status 429;
 
-    waf_zone name=waf size=20m;
     server {
-        include /etc/nginx/bots.d/blockbots.conf;
-
         # restrict methods (already handled with modsecurity)
         # if ($request_method !~ ^(GET)$) {
         #     return '444';
         # }
 
-        modsecurity on;
-        modsecurity_rules_file /etc/nginx/modsec/main.conf;
-
         # log only blocked requests
         # access_log  logs/waf_blocked_requests.yml     yaml   if=$waf_blocking_log;
         access_log    /dev/stdout    main    if=$waf_blocking_log;
-
-        # waf setup
-        waf on;
-        waf_rule_path /etc/nginx/waf_assets/rules/;
-        waf_mode FULL;
-        waf_cc_deny on rate=100r/m duration=1h zone=waf:cc;
-        waf_cache on capacity=50;
-        # waf_modsecurity on file=/etc/nginx/modsec/main.conf;
-        waf_action blacklist=444 cc_deny=444 modsecurity=follow zone=waf:action;
-        waf_verify_bot on;
 
         # security headers
         # add_header X-XSS-Protection          "1; mode=block" always;
