--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,8 +8,6 @@ load_module modules/ngx_http_waf_module.so;
 load_module modules/ngx_http_brotli_filter_module.so;
 load_module modules/ngx_http_brotli_static_module.so;
 
-# error_log  /var/log/nginx/error.log warn;
-# error_log  /dev/stdout warn;
 error_log  /dev/stdout error;
 pid        /var/run/nginx.pid;
 
@@ -40,8 +38,6 @@ http {
                         '  waf_rule_type: "$waf_rule_type"\n'
                         '  waf_rule_details: "$waf_rule_details"\n';
 
-    # access_log   /var/log/nginx/access.log  main;
-    # access_log   /dev/stdout    main;
     access_log off;
 
     charset                     utf-8;
@@ -119,6 +115,7 @@ http {
         default "$proxy_forwarded_elem";
     }
 
+    # not needed, handled with waf
     # limit_req_zone $binary_remote_addr zone=reqperip:10m rate=2r/s;
     # limit_req_status 429;
 
