--- a/nginx/conf/modsec/modsecurity.conf
+++ b/nginx/conf/modsec/modsecurity.conf
@@ -168,7 +168,7 @@ SecRule TX:/^MSC_/ "!@streq 0" \
 # Do keep in mind that enabling this directive does increases both
 # memory consumption and response latency.
 #
-SecResponseBodyAccess On
+SecResponseBodyAccess Off
 
 # Which response MIME types do you want to inspect? You should adjust the
 # configuration below to catch documents but avoid static files
@@ -243,7 +243,8 @@ SecAuditEngine RelevantOnly
 SecAuditLogRelevantStatus "^(?:5|4(?!04))"
 
 # Log everything we know about a transaction.
-SecAuditLogParts ABIJDEFHZ
+# SecAuditLogParts ABIJDEFHZ
+SecAuditLogParts H
 
 # Use a single file for logging. This is much easier to look at, but
 # assumes that you will use the audit log only ocassionally.
