--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,6 +7,7 @@ load_module modules/ngx_http_geoip2_module.so;
 load_module modules/ngx_http_waf_module.so;
 load_module modules/ngx_http_brotli_filter_module.so;
 load_module modules/ngx_http_brotli_static_module.so;
+load_module modules/ngx_http_headers_more_filter_module.so;
 
 error_log  /dev/stdout error;
 pid        /var/run/nginx.pid;
@@ -78,6 +79,8 @@ http {
     brotli on;
     brotli_types text/plain text/css application/json application/javascript application/x-javascript text/javascript;
     brotli_comp_level 6;
+
+    more_set_headers 'Server: Synthetix';
 
     # link iso country codes from the geoip2 db
     geoip2 /etc/nginx/geoip/dbip-country-lite.mmdb {
