--- a/nginx/conf/owasp/crs-setup.conf
+++ b/nginx/conf/owasp/crs-setup.conf
@@ -867,3 +867,24 @@ SecAction \
     pass,\
     t:none,\
     setvar:tx.crs_setup_version=334"
+
+SecRule REQUEST_URI "@streq /status" \
+    "id:1,\
+    phase:1,\
+    pass,\
+    nolog,\
+    ctl:ruleRemoveById=920350"
+
+SecRule REQUEST_URI "@streq /favicon.ico" \
+    "id:2,\
+    phase:1,\
+    pass,\
+    nolog,\
+    ctl:ruleRemoveById=920350"
+
+SecRule REQUEST_URI "@streq /health" \
+    "id:3,\
+    phase:1,\
+    pass,\
+    nolog,\
+    ctl:ruleRemoveById=920350"
