--- a/nginx/conf/modsec/modsecurity.conf
+++ b/nginx/conf/modsec/modsecurity.conf
@@ -243,8 +243,8 @@ SecAuditEngine RelevantOnly
 SecAuditLogRelevantStatus "^(?:5|4(?!04))"
 
 # Log everything we know about a transaction.
-# SecAuditLogParts ABIJDEFHZ
-SecAuditLogParts H
+SecAuditLogParts ABIJDEFHZ
+# SecAuditLogParts H
 
 # Use a single file for logging. This is much easier to look at, but
 # assumes that you will use the audit log only ocassionally.
