chore: more exclusions
Signed-off-by: Jakub Mucha <jakub.mucha@icloud.com>

--- a/nginx/conf/owasp/crs-setup.conf
+++ b/nginx/conf/owasp/crs-setup.conf
@@ -888,3 +888,24 @@ SecRule REQUEST_URI "@streq /health" \
     pass,\
     nolog,\
     ctl:ruleRemoveById=920350"
+
+SecRule REQUEST_URI "@streq /status" \
+    "id:4,\
+    phase:1,\
+    pass,\
+    nolog,\
+    ctl:ruleRemoveById=920300"
+
+SecRule REQUEST_URI "@streq /favicon.ico" \
+    "id:5,\
+    phase:1,\
+    pass,\
+    nolog,\
+    ctl:ruleRemoveById=920300"
+
+SecRule REQUEST_URI "@streq /health" \
+    "id:6,\
+    phase:1,\
+    pass,\
+    nolog,\
+    ctl:ruleRemoveById=920300"
