ua whitelist: python-requests
Signed-off-by: Jakub Mucha <jakub.mucha@icloud.com>

--- a/nginx/conf/owasp/crs-setup.conf
+++ b/nginx/conf/owasp/crs-setup.conf
@@ -909,3 +909,10 @@ SecRule REQUEST_URI "@streq /health" \
     pass,\
     nolog,\
     ctl:ruleRemoveById=920300"
+
+SecRule REQUEST_HEADERS:User-Agent "@Contains python-requests" \
+    "id:7,\
+    phase:1,\
+    pass,\
+    nolog,\
+    ctl:ruleRemoveById=913101"
