feat: remove headers
Signed-off-by: Jakub Mucha <jakub.mucha@icloud.com>

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -80,7 +80,8 @@ http {
     brotli_types text/plain text/css application/json application/javascript application/x-javascript text/javascript;
     brotli_comp_level 6;
 
-    more_set_headers 'Server: Synthetix';
+    more_clear_headers  "server";
+    more_clear_headers  "x-powered-by";
 
     # link iso country codes from the geoip2 db
     geoip2 /etc/nginx/geoip/dbip-country-lite.mmdb {
