--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,12 +2,13 @@ user  nginx;
 worker_processes  auto;
 worker_rlimit_nofile  65535;
 
-load_module modules/ngx_http_modsecurity_module.so;
 load_module modules/ngx_http_geoip2_module.so;
 load_module modules/ngx_http_waf_module.so;
 load_module modules/ngx_http_brotli_filter_module.so;
 load_module modules/ngx_http_brotli_static_module.so;
 load_module modules/ngx_http_headers_more_filter_module.so;
+load_module modules/ngx_http_security_headers_module.so;
+load_module modules/ngx_http_modsecurity_module.so;
 
 error_log  /dev/stdout error;
 pid        /var/run/nginx.pid;
@@ -66,6 +67,9 @@ http {
     open_file_cache_valid       30s;
     open_file_cache_min_uses    2;
 
+    security_headers on;
+    hide_server_tokens on;
+
     gzip on;
     gzip_http_version 1.1;
     gzip_vary on;
@@ -80,19 +84,10 @@ http {
     brotli_types text/plain text/css application/json application/javascript application/x-javascript text/javascript;
     brotli_comp_level 6;
 
-    more_clear_headers  "server";
-    more_clear_headers  "x-powered-by";
-
     # link iso country codes from the geoip2 db
     geoip2 /etc/nginx/geoip/dbip-country-lite.mmdb {
         $geoip2_data_country_code country iso_code;
     }
-
-    # map HSTS header
-    map $scheme $hsts_header { https "max-age=31556926; includeSubDomains; preload"; }
-
-    # map status to exclude from access log
-    map $status $writelog { 444 0; default 1; }
 
     # Connection header for WebSocket reverse proxy
     map $http_upgrade $connection_upgrade {
