feat: add sec headers
Signed-off-by: Jakub Mucha <jakub.mucha@icloud.com>

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,7 +7,6 @@ load_module modules/ngx_http_waf_module.so;
 load_module modules/ngx_http_brotli_filter_module.so;
 load_module modules/ngx_http_brotli_static_module.so;
 load_module modules/ngx_http_headers_more_filter_module.so;
-load_module modules/ngx_http_security_headers_module.so;
 load_module modules/ngx_http_modsecurity_module.so;
 
 error_log  /dev/stdout error;
@@ -67,8 +66,28 @@ http {
     open_file_cache_valid       30s;
     open_file_cache_min_uses    2;
 
-    security_headers on;
-    hide_server_tokens on;
+    # remove headers
+    more_clear_headers 'Server';
+    more_clear_headers 'X-Powered-By';
+
+    # security headers
+    more_set_headers "Strict-Transport-Security: max-age=31536000; includeSubDomains; preload";
+    more_set_headers "X-Content-Type-Options: nosniff";
+    more_set_headers "X-Frame-Options: SAMEORIGIN";
+    more_set_headers "X-XSS-Protection: 1; mode=block";
+    more_set_headers "Referrer-Policy: strict-origin-when-cross-origin";
+    more_set_headers "Content-Security-Policy: default-src 'self' *.synthetix.io synthetix.io;base-uri 'self';font-src 'self' https: data:;form-action 'self';frame-ancestors 'self';img-src 'self' data:;object-src 'none';script-src 'self';script-src-attr 'none';style-src 'self' https: 'unsafe-inline'; upgrade-insecure-requests"
+    more_set_headers "Permissions-Policy: accelerometer=(), camera=(), geolocation=(), gyroscope=(), magnetometer=(), microphone=(), payment=(), usb=()";
+    more_set_headers "Cross-Origin-Embedder-Policy: require-corp"
+    more_set_headers "Cross-Origin-Opener-Policy: same-origin"
+    more_set_headers "Cross-Origin-Resource-Policy: same-origin"
+    more_set_headers "Origin-Agent-Cluster: ?1"
+    more_set_headers "X-DNS-Prefetch-Control: off"
+    more_set_headers "X-Download-Options: noopen"
+    more_set_headers "X-Permitted-Cross-Domain-Policies: none"
+    # cors
+    more_set_headers "Access-Control-Allow-Origin: *"
+    more_set_headers "Access-Control-Allow-Methods: GET, HEAD, OPTIONS"
 
     gzip on;
     gzip_http_version 1.1;
