--- a/nginx/conf/owasp/crs-setup.conf
+++ b/nginx/conf/owasp/crs-setup.conf
@@ -385,7 +385,7 @@ SecAction \
  nolog,\
  pass,\
  t:none,\
- setvar:'tx.allowed_methods=GET'"
+ setvar:'tx.allowed_methods=GET HEAD OPTIONS'"
 
 # Content-Types that a client is allowed to send in a request.
 # Default: |application/x-www-form-urlencoded| |multipart/form-data| |multipart/related|
