chore: turn off logging and analytics
Signed-off-by: Jakub Mucha <jakub.mucha@icloud.com>

--- a/nginx/conf/modsec/modsecurity.conf
+++ b/nginx/conf/modsec/modsecurity.conf
@@ -239,7 +239,8 @@ SecDataDir /tmp/
 # trigger a server error (determined by a 5xx or 4xx, excluding 404,  
 # level response status codes).
 #
-SecAuditEngine RelevantOnly
+# SecAuditEngine RelevantOnly
+SecAuditEngine Off
 SecAuditLogRelevantStatus "^(?:5|4(?!04))"
 
 # Log everything we know about a transaction.
@@ -282,4 +283,4 @@ SecUnicodeMapFile unicode.mapping 20127
 # The following information will be shared: ModSecurity version,
 # Web Server version, APR version, PCRE version, Lua version, Libxml2
 # version, Anonymous unique id for host.
-SecStatusEngine On
+SecStatusEngine Off
