--- a/nginx/conf/owasp/crs-setup.conf
+++ b/nginx/conf/owasp/crs-setup.conf
@@ -114,8 +114,8 @@
 # - In Apache, you can use ErrorDocument to show a friendly error page or
 #   perform a redirect: https://httpd.apache.org/docs/2.4/custom-error.html
 #
-SecDefaultAction "phase:1,nolog,auditlog,deny,status:403"
-SecDefaultAction "phase:2,nolog,auditlog,deny,status:403"
+SecDefaultAction "phase:1,nolog,noauditlog,deny,status:403"
+SecDefaultAction "phase:2,nolog,noauditlog,deny,status:403"
 
 # Example: Self-contained mode, redirect back to homepage on blocking
 # - In this configuration the 'tag' action includes the Host header data in the
