--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -6,10 +6,13 @@ runtimes:
     - node@16.14.2
 actions:
   enabled:
+    - trunk-announce
+    - trunk-check-pre-push
+    - trunk-fmt-pre-commit
     - trunk-cache-prune
     - trunk-upgrade-available
 cli:
-  version: 1.2.1
+  version: 1.4.1
 plugins:
   sources:
     - id: trunk
@@ -17,13 +20,13 @@ plugins:
       uri: https://github.com/trunk-io/plugins
 lint:
   enabled:
-    - black@22.12.0
+    - black@23.1.0
     - flake8@6.0.0
-    - isort@5.11.4
-    - actionlint@1.6.22
+    - isort@5.12.0
+    - actionlint@1.6.23
     - git-diff-check@SYSTEM
-    - gitleaks@8.15.2
+    - gitleaks@8.15.3
     - hadolint@2.12.0
-    - prettier@2.8.1
+    - prettier@2.8.3
     - shellcheck@0.9.0
     - shfmt@3.5.0
