--- a/nginx-debug/conf/owasp/crs-setup.conf
+++ b/nginx-debug/conf/owasp/crs-setup.conf
@@ -916,3 +916,17 @@ SecRule REQUEST_HEADERS:User-Agent "@Contains python-requests" \
     pass,\
     nolog,\
     ctl:ruleRemoveById=913101"
+
+SecRule REQUEST_BASENAME "@beginsWith /pyth-mainnet" \
+    "id:8,\
+    phase:1,\
+    pass,\
+    nolog,\
+    ctl:ruleRemoveById=942450"
+
+SecRule REQUEST_BASENAME "@beginsWith /pyth-testnet" \
+    "id:9,\
+    phase:1,\
+    pass,\
+    nolog,\
+    ctl:ruleRemoveById=942450"
