--- a/nginx/conf/owasp/crs-setup.conf
+++ b/nginx/conf/owasp/crs-setup.conf
@@ -917,14 +917,14 @@ SecRule REQUEST_HEADERS:User-Agent "@Contains python-requests" \
     nolog,\
     ctl:ruleRemoveById=913101"
 
-SecRule REQUEST_BASENAME "@beginsWith /pyth-mainnet" \
+SecRule REQUEST_URI "@beginsWith /pyth-mainnet" \
     "id:8,\
     phase:1,\
     pass,\
     nolog,\
     ctl:ruleRemoveById=942450"
 
-SecRule REQUEST_BASENAME "@beginsWith /pyth-testnet" \
+SecRule REQUEST_URI "@beginsWith /pyth-testnet" \
     "id:9,\
     phase:1,\
     pass,\
