--- a/nginx/conf/owasp/crs-setup.conf
+++ b/nginx/conf/owasp/crs-setup.conf
@@ -930,3 +930,10 @@ SecRule REQUEST_URI "@beginsWith /pyth-testnet" \
     pass,\
     nolog,\
     ctl:ruleRemoveById=942450"
+
+SecRule REMOTE_ADDR "@ipMatch 34.232.200.35" \
+    "id:10,\
+    phase:1,\
+    nolog,\
+    allow,\
+    ctl:ruleEngine=off"
