--- a/nginx/conf/owasp/crs-setup.conf
+++ b/nginx/conf/owasp/crs-setup.conf
@@ -937,3 +937,10 @@ SecRule REMOTE_ADDR "@ipMatch 34.232.200.35" \
     nolog,\
     allow,\
     ctl:ruleEngine=off"
+
+SecRule REMOTE_ADDR "@ipMatch 3.213.160.2" \
+    "id:10,\
+    phase:1,\
+    nolog,\
+    allow,\
+    ctl:ruleEngine=off"
