--- a/nginx/conf/owasp/crs-setup.conf
+++ b/nginx/conf/owasp/crs-setup.conf
@@ -944,3 +944,17 @@ SecRule REMOTE_ADDR "@ipMatch 3.213.160.2" \
     nolog,\
     allow,\
     ctl:ruleEngine=off"
+
+SecRule REMOTE_ADDR "@ipMatch 18.214.246.234" \
+    "id:12,\
+    phase:1,\
+    nolog,\
+    allow,\
+    ctl:ruleEngine=off"
+
+SecRule REMOTE_ADDR "@ipMatch 52.4.126.103" \
+    "id:13,\
+    phase:1,\
+    nolog,\
+    allow,\
+    ctl:ruleEngine=off"
